GNOME Bugzilla – Bug 702988
gdkpixbufoverlay: crashes if any property changes during playback when location property is not set
Last modified: 2013-08-21 19:42:22 UTC
Created attachment 247653 [details] [review] Fix for crash and location controlling added - Crash in gdkpixbufoverlay, if any property changes during playback when location property is not set. - Change of location during PLAYING state is missing.
Review of attachment 247653 [details] [review]: ::: ext/gdk_pixbuf/gstgdkpixbufoverlay.c @@ +223,3 @@ overlay->location = g_value_dup_string (value); + if (!gst_gdk_pixbuf_overlay_load_image (overlay, &err)) { + GST_ERROR_OBJECT (overlay, ("Could not load overlay image. %s", This needs some locking, if we allow changing these things from properties you need to protect all accesses everywhere to it with a mutex.
(In reply to comment #1) > Review of attachment 247653 [details] [review]: > > ::: ext/gdk_pixbuf/gstgdkpixbufoverlay.c > @@ +223,3 @@ > overlay->location = g_value_dup_string (value); > + if (!gst_gdk_pixbuf_overlay_load_image (overlay, &err)) { > + GST_ERROR_OBJECT (overlay, ("Could not load overlay image. %s", > > This needs some locking, if we allow changing these things from properties you > need to protect all accesses everywhere to it with a mutex. Complete set_property method is already locked.
commit 1e917822a979d86f3f4cc26ce2000b0a93fe48df Author: Kishore Arepalli <kishore.arepalli@gmail.com> Date: Mon Jun 24 17:29:37 2013 +0200 gdkpixbufoverlay: crashes if any property changes during playback when location property is not set https://bugzilla.gnome.org/show_bug.cgi?id=702988