gdkpixbufoverlay: crashes if any property changes during playback when location property is not set

https://bugzilla.gnome.org/show_bug.cgi?id=702988